<resources>
    <!-- globals -->
    <string name="app_name">LeleMarket</string>
    <string name="title_home">首页</string>
    <string name="title_discover">发现</string>
    <string name="title_customization">定制</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_mine">我的</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home -->
    <!-- discover -->
    <!-- customization -->
    <!-- shoppingcart -->
    <!-- mine -->
</resources>
