<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_nav_home_btn"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/selector_nav_discover_btn"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_customization"
        android:icon="@drawable/selector_nav_customization_btn"
        android:title="@string/title_customization" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/selector_nav_shopping_cart_btn"
        android:title="@string/title_shopping_cart" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/selector_nav_mine_btn"
        android:title="@string/title_mine" />

</menu>
